--- a/admin/themes/simplebootx/Portal/AdminMember/edit.html
+++ b/admin/themes/simplebootx/Portal/AdminMember/edit.html
@@ -66,9 +66,9 @@
 							</td>
 						</tr>
 						<tr>
-							<th>经验</th>
+							<th>积分</th>
 							<td>
-								<input type="text" style="width: 400px;" name="member[exp]" required value="{$member.exp}" placeholder=""/>
+								<input type="text" style="width: 400px;" name="member[point]" required value="{$member.point}" placeholder=""/>
 							</td>
 							<th>等级</th>
 							<td>
