--- a/admin/themes/simplebootx/Portal/AdminMember/index.html
+++ b/admin/themes/simplebootx/Portal/AdminMember/index.html
@@ -52,7 +52,7 @@
                     <td>{$vo.phone}</td>
                     <td>{$vo.main_business}</td>
 					<td>{$vo.invite_userid}</td>
-					<td>{$vo.exp}/{$vo.level}</td>
+					<td>{$vo.point}/{$vo.level}</td>
 					<td>{$vo.gold}</td>
 					<td>{$vo.addtime}</td>
 					<td>{$post_status[$vo['post_status']]}<br>{$top_status[$vo['istop']]}</td>
