--- a/admin/themes/simplebootx/Admin/Main/index.html
+++ b/admin/themes/simplebootx/Admin/Main/index.html
@@ -12,14 +12,8 @@ li {
 </head>
 <body>
 	<div class="wrap">
-		<div id="home_toptip"></div>
-		<h4 class="well">{:L('SYSTEM_NOTIFICATIONS')}</h4>
-		<div class="home_info">
-			<ul id="thinkcmf_notices">
-				<li><img src="__TMPL__Public/assets/images/loading.gif"style="vertical-align: middle;" /><span style="display: inline-block; vertical-align: middle;">加载中...</span></li>
-			</ul>
-		</div>
-		<h4 class="well">{:L('SYSTEM_INFORMATIONS')}</h4>
+		
+		<h4 class="well">会员总览</h4>
 		<div class="home_info">
 			<ul>
 				<volist name="server_info" id="vo">
@@ -27,7 +21,7 @@ li {
 				</volist>
 			</ul>
 		</div>
-		<h4 class="well">{:L('INITIATE_TEAM')}</h4>
+		<h4 class="well">店铺总览</h4>
 		<div class="home_info" id="home_devteam">
 			<ul>
 				<li><em>ThinkCMF</em> <a href="http://www.thinkcmf.com" target="_blank">www.thinkcmf.com</a></li>
@@ -36,7 +30,7 @@ li {
 				<li><em>{:L('CONTACT_EMAIL')}</em> <span>cmf@simplewind.net</span></li>
 			</ul>
 		</div>
-		<h4 class="well">{:L('CONTRIBUTORS')}</h4>
+		<h4 class="well">广告总览</h4>
 		<div class="">
 			<ul class="inline" style="margin-left: 25px;">
 				<li>Kin Ho</li>
