--- a/admin/themes/simplebootx/Portal/AdminCategorys/index.html
+++ b/admin/themes/simplebootx/Portal/AdminCategorys/index.html
@@ -12,6 +12,7 @@
         <select class="select_2" name="type">
           	<option value='0' <if condition = "$type eq 0">selected="selected"</if>>信息分类</option>
           	<option value='1' <if condition = "$type eq 1">selected="selected"</if>>圈子分类</option>
+            <option value='2' <if condition = "$type eq 2">selected="selected"</if>>店铺分类</option>
         </select>
         <!-- &nbsp;&nbsp;时间：
         <input type="text" name="start_time" class="input length_2 J_date" value="{$formget.start_time|default=''}" style="width:80px;" autocomplete="off">-<input type="text" class="input length_2 J_date" name="end_time" value="{$formget.end_time}" style="width:80px;" autocomplete="off">
