--- a/admin/themes/simplebootx/Portal/AdminMember/index.html
+++ b/admin/themes/simplebootx/Portal/AdminMember/index.html
@@ -46,7 +46,7 @@
 				<tr>
 					<!-- <td><input type="checkbox" class="js-check" data-yid="js-check-y" data-xid="js-check-x" name="ids[]" value="{$vo.id}" title="ID:{$vo.id}"></td> -->
 					<!-- <td><input name="listorders[{$vo.infosid}]" class="input input-order" type="text" size="5" value="{$vo.listorder}"></td> -->
-					<td>{$vo.user_id}</td>
+					<td>{$vo.member_id}</td>
                     <td>{$vo.username}</td>
                     <td>{$vo.realname}</td>
                     <td>{$vo.phone}</td>
