--- a/admin/themes/simplebootx/Portal/AdminShop/edit.html
+++ b/admin/themes/simplebootx/Portal/AdminShop/edit.html
@@ -4,21 +4,11 @@
 	margin-bottom: 5px;
 }
 </style>
-<!-- <script type="text/html" id="photos-item-wrapper">
-	<li id="savedimage{id}">
-		<input id="photo-{id}" type="hidden" name="photos_url[]" value="{filepath}"> 
-		<input id="photo-{id}-name" type="text" name="photos_alt[]" value="{name}" style="width: 160px;" title="图片名称">
-		<img id="photo-{id}-preview" src="{url}" style="height:36px;width: 36px;" onclick="parent.image_preview_dialog(this.src);">
-		<a href="javascript:upload_one_image('图片上传','#photo-{id}');">替换</a>
-		<a href="javascript:(function(){$('#savedimage{id}').remove();})();">移除</a>
-	</li>
-</script> -->
 </head>
 <body>
 	<div class="wrap js-check-wrap">
 		<ul class="nav nav-tabs">
 			<li><a href="{:U('AdminShop/index')}">店铺管理</a></li>
-			<li><a href="{:U('AdminShop/add')}" target="_self">添加店铺</a></li>
 			<li class="active"><a href="#">店铺编辑</a></li>
 		</ul>
 		<form action="{:U('AdminShop/edit_post')}" method="post" class="form-horizontal js-ajax-forms" enctype="multipart/form-data">
@@ -28,18 +18,84 @@
 						<tr>
 							<th width="100">店铺分类</th>
 							<td>
-								<select style="max-height: 100px;" name="cg_id">{$taxonomys}</select>
-							</td>
-						</tr>
-						<tr>
-							<th width="100">是否实体</th>
-							<td>
-								<select style="max-height: 100px;" name="post[is_shiti]">
-									<option value="1" <if condition="$shop.is_shiti eq 0">selected</if>>是</option>
-									<option value="0" <if condition="$shop.is_shiti eq 0">selected</if>>否</option>
+								<select style="max-height: 100px;" name="post[cg_id]">
+									<foreach name="cg_id" item="vo"  key="k">
+									<option value="{$k}" <if condition = "$shop.cg_id eq $k">selected="selected"</if>>{$vo.name}</option>
+									</foreach>
 								</select>
 							</td>
 						</tr>
+						<tr>
+							<th width="100">店铺性质</th>
+							<td>
+								<select style="max-height: 100px;" name="post[shop_property]">
+									<option value="1" <if condition="$shop.shop_property eq 1">selected</if>>自营</option>
+									<option value="0" <if condition="$shop.shop_property eq 0">selected</if>>实体店铺</option>
+								</select>
+							</td>
+						</tr>
+						<tr>
+							<th width="100">是否展示</th>
+							<td>
+								<select style="max-height: 100px;" name="post[status]">
+									<option value="1" <if condition="$shop.status eq 1">selected</if>>展示</option>
+									<option value="0" <if condition="$shop.status eq 0">selected</if>>不展示</option>
+								</select>
+							</td>
+						</tr>
+						<tr>
+							<th width="100">是否连锁</th>
+							<td>
+								<select style="max-height: 100px;" name="post[is_brand]">
+									<option value="1" <if condition="$shop.is_brand eq 1">selected</if>>是</option>
+									<option value="0" <if condition="$shop.is_brand eq 0">selected</if>>否</option>
+								</select>
+							</td>
+						</tr>
+						<tr>
+							<th width="100">是否推荐</th>
+							<td>
+								<select style="max-height: 100px;" name="post[recommended]">
+									<option value="1" <if condition="$shop.recommended eq 1">selected</if>>是</option>
+									<option value="0" <if condition="$shop.recommended eq 0">selected</if>>否</option>
+								</select>
+							</td>
+						</tr>
+						<tr>
+							<th width="100">是否审核</th>
+							<td>
+								<select style="max-height: 100px;" name="post[check]">
+									<option value="1" <if condition="$shop.check eq 1">selected</if>>是</option>
+									<option value="0" <if condition="$shop.check eq 0">selected</if>>否</option>
+								</select>
+							</td>
+						</tr>
+						<tr>
+							<th width="100">押金</th>
+							<td>
+								<select style="max-height: 100px;" name="post[deposit]">
+									<option value="1" <if condition="$shop.deposit eq 1">selected</if>>是</option>
+									<option value="0" <if condition="$shop.deposit eq 0">selected</if>>否</option>
+								</select>
+							</td>
+						</tr>
+						<tr>
+							<th width="100">等级</th>
+							<td>
+								<select style="max-height: 100px;" name="post[level]">
+									<option value="1" <if condition="$shop.level eq 1">selected</if>>豪华版</option>
+									<option value="0" <if condition="$shop.level eq 0">selected</if>>初级版</option>
+								</select>
+							</td>
+						</tr>
+						<if condition="$shop.level eq 1">
+						<tr>
+							<th>有效期</th>
+							<td>
+								<input type="text" name="post[vip_time]" class="js-datetime" value="{$shop['vip_time']}" style="width: 120px;" autocomplete="off">
+							</td>
+						</tr>
+						</if>
 						<tr>
 							<th width="100">是否新店</th>
 							<td>
@@ -52,7 +108,6 @@
 						<tr>
 							<th>商店名称</th>
 							<td>
-								<input type="hidden" name="post[id]" value="{$shop.id}">
 								<input type="text" style="width: 400px;" name="post[shop_name]" required value="{$shop.shop_name}" placeholder="请输入标题"/>
 								<span class="form-required">*</span>
 							</td>
@@ -66,25 +121,19 @@
 						<tr>
 							<th>主营业务</th>
 							<td>
-								<textarea name="post[shop_major]" style="width: 98%; height: 50px;" placeholder="请填写摘要">{$shop.shop_major}</textarea> 多关键词之间用空格或者英文逗号隔开
+								<input type="text" name="post[shop_major]" style="width: 400px" value="{$shop['shop_major']}" placeholder="请输入关键字">
 							</td>
 						</tr>
 						<tr>
 							<th>营业时间</th>
 							<td>
-								<input type="text" name="post[shop_time]" value="{$shop['shop_time']}" style="width: 400px" placeholder="请输入折扣信息">
+								<input type="text" name="post[start_time]" class="js-datetime" value="{$shop['start_time']}" style="width: 120px;" autocomplete="off">-
+								<input type="text" class="js-datetime" name="post[end_time]" value="{$shop['end_time']}" style="width: 120px;" autocomplete="off">
 							</td>
 						</tr>
 						<tr>
 							<th>关联用户手机号</th>
-							<td><input type="text" name="post[phone]" id="phone" value="{$shop['phone']}" style="width: 400px" placeholder="请输入关联用户手机号"></td>
-						</tr>
-						<tr>
-							<th>有效期</th>
-							<td>
-								<input type="text" name="post[start_time]" class="js-datetime" value="{$shop['start_time']}" style="width: 120px;" autocomplete="off">-
-								<input type="text" class="js-datetime" name="post[end_time]" value="{$shop['end_time']}" style="width: 120px;" autocomplete="off">
-							</td>
+							<td><input type="text" name="post[shop_phone]" id="phone" value="{$shop['shop_phone']}" style="width: 400px" placeholder="请输入关联用户手机号"></td>
 						</tr>
 						<tr>
 							<th>商家联系人</th>
@@ -97,131 +146,62 @@
 						<tr>
 							<th>商家详情</th>
 							<td>
-								<script type="text/plain" id="content" name="post[shop_detail]">{$shop.shop_detail}</script>
+								<input type="text" name="post[shop_detail]" value="{$shop['shop_detail']}" style="width: 400px" placeholder="请输入商家联系人">
 							</td>
 						</tr>
-						<!-- <tr>
+						<tr>
+							<th>点击量</th>
+							<td>
+								<input type="text" name="post[hits]" style="width: 400px" value="{$shop['hits']}" placeholder="请输入关键字">
+							</td>
+						</tr>
+						<tr>
 							<th>相册图集</th>
 							<td>
 								<ul id="photos" class="pic-list unstyled">
-									<notempty name="smeta['photo']">
-										<foreach name="smeta['photo']" item="vo">
-										<php>$img_url=sp_get_image_preview_url($vo['url']);</php>
+									<notempty name="shop['shop_pic']">
+										<foreach name="shop['shop_pic']" item="vo">
 										<li id="savedimage{$key}">
-											<input id="photo-{$key}" type="hidden" name="photos_url[]" value="{$img_url}"> 
-											<input id="photo-{$key}-name" type="text" name="photos_alt[]" value="{$vo.alt}" style="width: 200px;" title="图片名称">
-											<img id="photo-{$key}-preview" src="{:sp_get_image_preview_url($vo['url'])}" style="height:36px;width: 36px;" onclick="parent.image_preview_dialog(this.src);">
-											<a href="javascript:upload_one_image('图片上传','#photo-{$key}');">替换</a>
-											<a href="javascript:(function(){ $('#savedimage{$key}').remove();})();">移除</a>
+											<a href="{:sp_get_image_preview_url($vo)}" target='_blank'><img id="photo-{$key}-preview" src="{:sp_get_image_preview_url($vo)}" style="height:36px;width: 36px;"></a>
 										</li>
 										</foreach>
 									</notempty>
 								</ul>
-								<a href="javascript:upload_multi_image('图片上传','#photos','photos-item-wrapper');" class="btn btn-small">选择图片</a>
 							</td>
-						</tr> -->
+						</tr>
 					</table>
 				</div>
 				<div class="span3">
 					<table class="table table-bordered">
 						<tr>
-							<td><b>缩略图</b></td>
+							<td><b>logo</b></td>
 						</tr>
 						<tr>
 							<td>
 								<div style="text-align: center;">
-									<input type="hidden" name="shop_pic" id="thumb" value="{$shop['shop_pic']}">
-									<a href="javascript:upload_one_image('图片上传','#thumb');">
-										<if condition="empty($shop['shop_pic'])">
-											<img src="__TMPL__Public/assets/images/default-thumbnail.png" id="thumb-preview" width="135" style="cursor: hand"/>
-										<else />
-											<img src="{:sp_get_image_preview_url($shop['shop_pic'])}" id="thumb-preview" width="135" style="cursor: hand"/>
-										</if>
-									</a>
-									<input type="button" class="btn btn-small" onclick="$('#thumb-preview').attr('src','__TMPL__Public/assets/images/default-thumbnail.png');$('#thumb').val('');return false;" value="取消图片">
+									<img src="{:sp_get_image_preview_url($shop['shop_logo'])}" id="thumb-preview" width="135" style="cursor: hand"/>
 								</div>
 							</td>
 						</tr>
-						<!-- <tr>
+						<tr>
 							<th>发布时间</th>
 						</tr>
 						<tr>
 							<td><input type="text" name="post[add_time]" value="{$shop.add_time}" class="js-datetime" style="width: 160px;"></td>
-						</tr> -->
-						<!-- <tr>
-							<th>评论</th>
 						</tr>
-						<tr>
-							<td><label style="width: 88px"><a href="javascript:open_iframe_dialog('{:U('comment/commentadmin/index',array('post_id'=>$shop['id']))}','评论列表')">查看评论</a></label>
-							</td>
-						</tr>
-						<tr>
-							<th>状态</th>
-						</tr>
-						<tr>
-							<td>
-								<php>
-									$status_yes=$shop['post_status']==1?"checked":"";
-									$status_no=$shop['post_status']==0?"checked":"";
-									$istop_yes=$shop['istop']==1?"checked":"";
-									$istop_no=$shop['istop']==0?"checked":"";
-									$recommended_yes=$shop['recommended']==1?"checked":"";
-									$recommended_no=$shop['recommended']==0?"checked":""; 
-								</php>
-								<label class="radio"><input type="radio" name="post[post_status]" value="1" {$status_yes}>审核通过</label>
-								<label class="radio"><input type="radio" name="post[post_status]" value="0" {$status_no}>未审核</label>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<label class="radio"><input type="radio" name="post[istop]" value="1" {$istop_yes}>置顶</label>
-								<label class="radio"><input type="radio" name="post[istop]" value="0" {$istop_no}>未置顶</label>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<label class="radio"><input type="radio" name="post[recommended]" value="1" {$recommended_yes}>推荐</label>
-								<label class="radio"><input type="radio" name="post[recommended]" value="0" {$recommended_no}>未推荐</label>
-							</td>
-						</tr>
-						<tr>
-							<th>文章模板</th>
-						</tr>
-						<tr>
-							<td>
-								<php>
-									$tpl_list=sp_admin_get_tpl_file_list();
-									unset($tpl_list['page']);
-								</php>
-								<select style="min-width: 190px;" name="smeta[template]">
-									<option value="">请选择模板</option>
-									<foreach name="tpl_list" item="vo">
-										<php>$template_selected=$smeta['template']==$vo?"selected":"";</php>
-										<option value="{$vo}"{$template_selected}>{$vo}{:C("TMPL_TEMPLATE_SUFFIX")}</option>
-									</foreach>
-								</select>
-							</td>
-						</tr> -->
 					</table>
 				</div>
 			</div>
 			<div class="form-actions">
-				<button class="btn btn-primary js-ajax-submit" type="submit">提交</button>
 				<a class="btn" href="{:U('AdminShop/index')}">返回</a>
 			</div>
 		</form>
 	</div>
 	<script type="text/javascript" src="__PUBLIC__/js/common.js"></script>
 	<script type="text/javascript">
-		//编辑器路径定义
-		var editorURL = GV.WEB_ROOT;
-	</script>
-	<script type="text/javascript" src="__PUBLIC__/js/ueditor/ueditor.config.js"></script>
-	<script type="text/javascript" src="__PUBLIC__/js/ueditor/ueditor.all.min.js"></script>
-	<script type="text/javascript">
+		$("input").attr("disabled","disabled");
+		$("select").attr("disabled","disabled");
 		$(function() {
-			
-			//setInterval(function(){public_lock_renewal();}, 10000);
 			$(".js-ajax-close-btn").on('click', function(e) {
 				e.preventDefault();
 				Wind.use("artDialog", function() {
@@ -241,134 +221,6 @@
 					});
 				});
 			});
-			/////---------------------
-			Wind.use('validate', 'ajaxForm', 'artDialog', function() {
-				//javascript
-
-				//编辑器
-				editorcontent = new baidu.editor.ui.Editor();
-				editorcontent.render('content');
-				try {
-					editorcontent.sync();
-				} catch (err) {
-				}
-				//增加编辑器验证规则
-				jQuery.validator.addMethod('editorcontent', function() {
-					try {
-						editorcontent.sync();
-					} catch (err) {
-					}
-					;
-					return editorcontent.hasContents();
-				});
-				var form = $('form.js-ajax-forms');
-				//ie处理placeholder提交问题
-				if ($.browser && $.browser.msie) {
-					form.find('[placeholder]').each(function() {
-						var input = $(this);
-						if (input.val() == input.attr('placeholder')) {
-							input.val('');
-						}
-					});
-				}
-				//表单验证开始
-				form.validate({
-					//是否在获取焦点时验证
-					onfocusout : false,
-					//是否在敲击键盘时验证
-					onkeyup : false,
-					//当鼠标掉级时验证
-					onclick : false,
-					//验证错误
-					showErrors : function(errorMap, errorArr) {
-						//errorMap {'name':'错误信息'}
-						//errorArr [{'message':'错误信息',element:({})}]
-						try {
-							$(errorArr[0].element).focus();
-							art.dialog({
-								id : 'error',
-								icon : 'error',
-								lock : true,
-								fixed : true,
-								background : "#CCCCCC",
-								opacity : 0,
-								content : errorArr[0].message,
-								cancelVal : '确定',
-								cancel : function() {
-									$(errorArr[0].element).focus();
-								}
-							});
-						} catch (err) {
-						}
-					},
-					//验证规则
-					rules : {
-						'post[post_title]' : {
-							required : 1
-						},
-						'post[post_content]' : {
-							editorcontent : true
-						}
-					},
-					//验证未通过提示消息
-					messages : {
-						'post[post_title]' : {
-							required : '请输入标题'
-						},
-						'post[post_content]' : {
-							editorcontent : '内容不能为空'
-						}
-					},
-					//给未通过验证的元素加效果,闪烁等
-					highlight : false,
-					//是否在获取焦点时验证
-					onfocusout : false,
-					//验证通过，提交表单
-					submitHandler : function(forms) {
-						$(forms).ajaxSubmit({
-							url : form.attr('action'), //按钮上是否自定义提交地址(多按钮情况)
-							dataType : 'json',
-							beforeSubmit : function(arr, $form, options) {
-
-							},
-							success : function(data, statusText, xhr, $form) {
-								if (data.status) {
-									setCookie("refersh_time", 1);
-									//添加成功
-									Wind.use("artDialog", function() {
-										art.dialog({
-											id : "succeed",
-											icon : "succeed",
-											fixed : true,
-											lock : true,
-											background : "#CCCCCC",
-											opacity : 0,
-											content : data.info,
-											button : [ {
-												name : '继续编辑？',
-												callback : function() {
-													//reloadPage(window);
-													return true;
-												},
-												focus : true
-											}, {
-												name : '返回列表页',
-												callback : function() {
-													location = "{:U('AdminShop/index')}";
-													return true;
-												}
-											} ]
-										});
-									});
-								} else {
-									artdialog_alert(data.info);
-								}
-							}
-						});
-					}
-				});
-			});
-			////-------------------------
 		});
 	</script>
 </body>
