--- a/admin/themes/simplebootx/Portal/AdminShop/index.html
+++ b/admin/themes/simplebootx/Portal/AdminShop/index.html
@@ -4,18 +4,55 @@
 	<div class="wrap js-check-wrap">
 		<ul class="nav nav-tabs">
 			<li class="active"><a href="javascript:;">店铺管理</a></li>
-			<li><a href="{:U('AdminShop/add')}" target="_self">添加店铺</a></li>
+			<!-- <li><a href="{:U('AdminShop/add')}" target="_self">添加店铺</a></li> -->
 		</ul>
 		<form class="well form-search" method="post" action="{:U('AdminShop/index')}">
-			分类： 
-			<select name="cg_id" style="width: 120px;">
-				<option value='0'>全部</option>{$taxonomys}
+			分类
+			<select name="cg_id" style="width: 65px;">
+				<option value='0' <if condition = "$formget.cg_id eq 0">selected="selected"</if>>全部</option>
+				<foreach name="cg_id" item="vo"  key="k">
+				<option value="{$k}" <if condition = "$formget.cg_id eq $k">selected="selected"</if>>{$vo.name}</option>
+				</foreach>
 			</select> &nbsp;&nbsp;
-			截止时间：
-			<input type="text" name="start_time" class="js-datetime" value="{$formget.start_time|default=''}" style="width: 120px;" autocomplete="off">-
-			<input type="text" class="js-datetime" name="end_time" value="{$formget.end_time|default=''}" style="width: 120px;" autocomplete="off"> &nbsp; &nbsp;
-			关键字： 
-			<input type="text" name="keyword" style="width: 200px;" value="{$formget.keyword|default=''}" placeholder="请输入关键字...">
+			豪华版
+			<select name="level" style="width: 65px;">
+				<option value='0' <if condition = "$formget.level eq 0">selected="selected"</if>>全部</option>
+				<foreach name="level" item="vo"  key="k">
+				<option value="{$k}" <if condition = "$formget.level eq $k">selected="selected"</if>>{$vo}</option>
+				</foreach>
+			</select> &nbsp;&nbsp;
+			活动
+			<select name="is_sale" style="width: 65px;">
+				<option value='0' <if condition = "$formget.is_sale eq 0">selected="selected"</if>>全部</option>
+				<foreach name="is_sale" item="vo"  key="k">
+				<option value="{$k}" <if condition = "$formget.is_sale eq $k">selected="selected"</if>>{$vo}</option>
+				</foreach>
+			</select> &nbsp;&nbsp;
+			招聘
+			<select name="is_recruit" style="width: 65px;">
+				<option value='0' <if condition = "$formget.is_recruit eq 0">selected="selected"</if>>全部</option>
+				<foreach name="is_recruit" item="vo"  key="k">
+				<option value="{$k}" <if condition = "$formget.is_recruit eq $k">selected="selected"</if>>{$vo}</option>
+				</foreach>
+			</select> &nbsp;&nbsp;
+			押金
+			<select name="deposit" style="width: 65px;">
+				<option value='0' <if condition = "$formget.deposit eq 0">selected="selected"</if>>全部</option>
+				<foreach name="deposit" item="vo"  key="k">
+				<option value="{$k}" <if condition = "$formget.deposit eq $k">selected="selected"</if>>{$vo}</option>
+				</foreach>
+			</select> &nbsp;&nbsp;
+			审核
+			<select name="check" style="width: 65px;">
+				<option value='0' <if condition = "$formget.check eq 0">selected="selected"</if>>全部</option>
+				<foreach name="check" item="vo"  key="k">
+				<option value="{$k}" <if condition = "$formget.check eq $k">selected="selected"</if>>{$vo}</option>
+				</foreach>
+			</select> &nbsp;&nbsp;
+			截止时间
+			<input type="text" name="vip_time" class="js-datetime" value="{$formget.vip_time|default=''}" style="width: 120px;" autocomplete="off"> &nbsp; &nbsp;
+			关键字:
+			<input type="text" name="keyword" style="width: 100px;" value="{$formget.keyword|default=''}" placeholder="请输入关键字...">
 			<input type="submit" class="btn btn-primary" value="搜索" />
 			<a class="btn btn-danger" href="{:U('AdminShop/index')}">清空</a>
 		</form>
@@ -25,43 +62,56 @@
 				<thead>
 					<tr>
 						<th width="15"><label><input type="checkbox" class="js-check-all" data-direction="x" data-checklist="js-check-x"></label></th>
-						<th width="30">排序</th>
-						<th width="30">ID</th>
+						<th width="20">排序</th>
+						<th width="20">ID</th>
 						<th width="70">店铺名</th>
-						<th width="70">主营业务</th>
-						<th width="70">商家联系人</th>
-						<th width="90">商家联系电话</th>
-						<th width="90">营业时间</th>
-						<th width="100">地址</th>
-						<th width="60">关联用户</th>
-						<th width="100">duetime</th>
-						<th width="50">状态</th>
-						<th width="70">操作</th>
+						<th width="80">主营业务</th>
+						<th width="30">联系人</th>
+						<th width="60">商家联系电话</th>
+						<th width="40">店铺性质</th>
+						<th width="40">是否连锁</th>
+						<th width="40">是否新店</th>
+						<th width="20">押金</th>
+						<th width="20">等级</th>
+						<th width="80">豪华版期限</th>
+						<th width="40">是否推荐</th>
+						<th width="40">是否展示</th>
+						<th width="40">是否审核</th>
+						<th width="20">操作</th>
 					</tr>
 				</thead>
 				<php>
 	        		$status=array("1"=>"展示","0"=>"不展示");
 	        		$is_shiti=array("1"=>"实体","0"=>"非实体");
+	        		$shop_property=array("1"=>"自营","0"=>"实体");
+	        		$is_brand=array("1"=>"连锁","0"=>"非连锁");
 	        		$is_new=array("1"=>"新店","0"=>"非新店");
 	        		$istop=array("1"=>"置顶","0"=>"不置顶");
+	        		$deposit=array("1"=>"已缴纳","0"=>"未缴纳","2"=>"已退款");
+	        		$level=array("0"=>"初级","1"=>"豪华");
+	        		$check=array("0"=>"未审核","1"=>"已审核");
+	        		$recomended=array("0"=>"未推荐","1"=>"推荐");
 	        	</php>
 				<foreach name="shops" item="vo">
 				<tr>
 					<td><input type="checkbox" class="js-check" data-yid="js-check-y" data-xid="js-check-x" name="ids[]" value="{$vo.id}" title="ID:{$vo.id}"></td>
-					<td><input name="listorders[{$vo.sid}]" class="input input-order" type="text" size="5" value="{$vo.listorder}"></td>
+					<td><input name="listorders[{$vo.id}]" class="input input-order" type="text" size="5" value="{$vo.listorder}"></td>
                     <td><b>{$vo.id}</b></td>
 					<td>{$vo.shop_name}</td>
 					<td>{$vo.shop_major}</td>
-					<td>{$vo.shop_contact}</td>
+					<td><a href="{:U('AdminMember/edit',array('id'=>$vo['member_id']))}"  target="_blank">{$vo.member_id}</a></td>
 					<td>{$vo.shop_phone}</td>
-					<td>{$vo.shop_time}</td>					
-					<td>{$vo.shop_addr}</td>
-					<td><a href="{:U('AdminMember/edit',array('id'=>$vo['member_id']))}"  target="_blank">{$vo.mamber_name}</a></td>
-					<td>{$vo.end_time}</td>
-					<td>{$status[$vo['status']]}<br>{$is_shiti[$vo['is_shiti']]}<br>{$is_new[$vo['is_new']]}<br>{$istop[$vo['istop']]}</td>
+					<td>{$shop_property[$vo['shop_property']]}</td>					
+					<td>{$is_brand[$vo['is_brand']]}</td>
+					<td>{$is_new[$vo['is_new']]}</td>
+					<td>{$deposit[$vo['deposit']]}</td>
+					<td>{$level[$vo['level']]}</td>
+					<td>{$vo.vip_time}</td>
+					<td>{$recomended[$vo['recommended']]}</td>
+					<td>{$status[$vo['status']]}</td>
+					<td>{$check[$vo['check']]}</td>
 					<td>
-						<a href="{:U('AdminShop/edit',array('id'=>$vo['id']))}">编辑</a> | 
-						<a href="{:U('AdminShop/delete',array('id'=>$vo['id']))}" class="js-ajax-delete">删除</a>
+						<a href="{:U('AdminShop/edit',array('id'=>$vo['id']))}">查看</a>
 					</td>
 				</tr>
 				</foreach>
@@ -73,9 +123,11 @@
 				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminShop/check',array('uncheck'=>1))}" data-subcheck="true">取消审核</button>
 				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminShop/top',array('top'=>1))}" data-subcheck="true">置顶</button>
 				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminShop/top',array('untop'=>1))}" data-subcheck="true">取消置顶</button>
-<!-- 				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminShop/recommend',array('recommend'=>1))}" data-subcheck="true">推荐</button>
-				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminShop/recommend',array('unrecommend'=>1))}" data-subcheck="true">取消推荐</button> -->
-				<button class="btn btn-danger btn-small js-ajax-submit" type="submit" data-action="{:U('AdminShop/delete')}" data-subcheck="true" data-msg="你确定删除吗？">删除</button>
+ 				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminShop/recommend',array('recommend'=>1))}" data-subcheck="true">推荐</button>
+				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminShop/recommend',array('unrecommend'=>1))}" data-subcheck="true">取消推荐</button>
+				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminShop/setstatus',array('status'=>1))}" data-subcheck="true">上架</button>
+				<button class="btn btn-primary btn-small js-ajax-submit" type="submit" data-action="{:U('AdminShop/setstatus',array('unstatus'=>1))}" data-subcheck="true">下架</button>
+				<!-- <button class="btn btn-danger btn-small js-ajax-submit" type="submit" data-action="{:U('AdminShop/delete')}" data-subcheck="true" data-msg="你确定删除吗？">删除</button> -->
 			</div>
 			<div class="pagination">{$page}</div>
 		</form>
