--- a/admin/themes/simplebootx/Portal/AdminAds/edit.html
+++ b/admin/themes/simplebootx/Portal/AdminAds/edit.html
@@ -4,15 +4,15 @@
 	margin-bottom: 5px;
 }
 </style>
-<!-- <script type="text/html" id="photos-item-wrapper">
+<script type="text/html" id="photos-item-wrapper">
 	<li id="savedimage{id}">
 		<input id="photo-{id}" type="hidden" name="photos_url[]" value="{filepath}"> 
-		<input id="photo-{id}-name" type="text" name="photos_alt[]" value="{name}" style="width: 160px;" title="图片名称">
-		<img id="photo-{id}-preview" src="{url}" style="height:36px;width: 36px;" onclick="parent.image_preview_dialog(this.src);">
+		<!-- <input id="photo-{id}-name" type="text" name="photos_alt[]" value="{name}" style="width: 160px;" title="图片名称"> -->
+		<img id="photo-{id}-preview" src="{url}" style="height:90px;width: 90px;" onclick="parent.image_preview_dialog(this.src);">
 		<a href="javascript:upload_one_image('图片上传','#photo-{id}');">替换</a>
 		<a href="javascript:(function(){$('#savedimage{id}').remove();})();">移除</a>
 	</li>
-</script> -->
+</script>
 </head>
 <body>
 	<div class="wrap js-check-wrap">
@@ -69,39 +69,38 @@
 							<th>商家名称</th>
 							<td><input type="text" name="post[store_name]" value="{$post['store_name']}" style="width: 400px" placeholder="请输入商家名称"></td>
 						</tr>
-						<tr>
+						<!-- <tr>
 							<th>商家地址</th>
 							<td><input type="text" name="post[store_addr]" value="{$post['store_addr']}" style="width: 400px" placeholder="请输入商家联系人"></td>
 						</tr>
 						<tr>
 							<th>商家营业时间</th>
 							<td><input type="text" name="post[store_time]" value="{$post['store_time']}" style="width: 400px" placeholder="请输入商家营业时间"></td>
-						</tr>
+						</tr> -->
 						<tr>
 							<th>商家联系人</th>
 							<td><input type="text" name="post[store_contact]" value="{$post['store_contact']}" style="width: 400px" placeholder="请输入商家联系人"></td>
 						</tr>
-						<tr>
+						<!-- <tr>
 							<th>商家联系电话</th>
 							<td><input type="text" name="post[store_phone]" value="{$post['store_phone']}" style="width: 400px" placeholder="请输入商家联系电话"></td>
-						</tr>
+						</tr> -->
 						<tr>
 							<th>内容</th>
 							<td>
 								<script type="text/plain" id="content" name="post[post_content]">{$post.post_content}</script>
 							</td>
 						</tr>
-						<!-- <tr>
+						<tr>
 							<th>相册图集</th>
 							<td>
 								<ul id="photos" class="pic-list unstyled">
-									<notempty name="smeta['photo']">
-										<foreach name="smeta['photo']" item="vo">
-										<php>$img_url=sp_get_image_preview_url($vo['url']);</php>
+									<notempty name="altas">
+										<foreach name="altas" item="vo">
 										<li id="savedimage{$key}">
-											<input id="photo-{$key}" type="hidden" name="photos_url[]" value="{$img_url}"> 
-											<input id="photo-{$key}-name" type="text" name="photos_alt[]" value="{$vo.alt}" style="width: 200px;" title="图片名称">
-											<img id="photo-{$key}-preview" src="{:sp_get_image_preview_url($vo['url'])}" style="height:36px;width: 36px;" onclick="parent.image_preview_dialog(this.src);">
+											<input id="photo-{$key}" type="hidden" name="photos_url[]" value="{$vo}"> 
+											<!-- <input id="photo-{$key}-name" type="text" name="photos_alt[]" value="{$vo.alt}" style="width: 200px;" title="图片名称"> -->
+											<img id="photo-{$key}-preview" src="{:sp_get_image_preview_url($vo)}" style="height:90px;width: 90px;" onclick="parent.image_preview_dialog(this.src);">
 											<a href="javascript:upload_one_image('图片上传','#photo-{$key}');">替换</a>
 											<a href="javascript:(function(){ $('#savedimage{$key}').remove();})();">移除</a>
 										</li>
@@ -110,7 +109,7 @@
 								</ul>
 								<a href="javascript:upload_multi_image('图片上传','#photos','photos-item-wrapper');" class="btn btn-small">选择图片</a>
 							</td>
-						</tr> -->
+						</tr>
 					</table>
 				</div>
 				<div class="span3">
