--- a/admin/themes/simplebootx/Portal/AdminFeedback/index.html
+++ b/admin/themes/simplebootx/Portal/AdminFeedback/index.html
@@ -14,7 +14,7 @@
 						<th width="50">ID</th>
 						<th width="50">MID</th>
 						<th width="250">内容</th>
-						<th width="50">操作</th>
+						<th width="50">状态</th>
 						<th width="30">操作</th>
 					</tr>
 				</thead>
