--- a/admin/themes/simplebootx/Portal/AdminAds/edit.html
+++ b/admin/themes/simplebootx/Portal/AdminAds/edit.html
@@ -28,7 +28,11 @@
 						<tr>
 							<th width="100">广告分类</th>
 							<td>
-								<select style="max-height: 100px;" name="cg_id">{$taxonomys}</select>
+								<select style="max-height: 100px;" name="post[cg_id]">
+									<foreach name="cg_id" item="vo"  key="k">
+										<option value="{$k}" <if condition = "$post.cg_id eq $k">selected="selected"</if>>{$vo}</option>
+									</foreach>
+								</select>
 							</td>
 						</tr>
 						<tr>
