--- a/admin/themes/simplebootx/Portal/AdminAds/index.html
+++ b/admin/themes/simplebootx/Portal/AdminAds/index.html
@@ -9,7 +9,10 @@
 		<form class="well form-search" method="post" action="{:U('AdminAds/index')}">
 			分类： 
 			<select name="cg_id" style="width: 120px;">
-				<option value='0'>全部</option>{$taxonomys}
+				<option value='0'>全部</option>
+				<foreach name="cg_id" item="vo"  key="k">
+				<option value="{$k}" <if condition = "$formget.cg_id eq $k">selected="selected"</if>>{$vo}</option>
+				</foreach>
 			</select> &nbsp;&nbsp;
 			截止时间：
 			<input type="text" name="start_time" class="js-datetime" value="{$formget.start_time|default=''}" style="width: 120px;" autocomplete="off">-
@@ -46,7 +49,7 @@
 				<foreach name="posts" item="vo">
 				<tr>
 					<td><input type="checkbox" class="js-check" data-yid="js-check-y" data-xid="js-check-x" name="ids[]" value="{$vo.id}" title="ID:{$vo.id}"></td>
-					<td><input name="listorders[{$vo.adsid}]" class="input input-order" type="text" size="5" value="{$vo.listorder}"></td>
+					<td><input name="listorders[{$vo.id}]" class="input input-order" type="text" size="5" value="{$vo.listorder}"></td>
                     <td><b>{$vo.id}</b></td>
 					<td>{$vo.post_title}</td>
 					<td>{$vo.store_contact}</td>
