--- a/admin/themes/simplebootx/Portal/AdminCategorys/index.html
+++ b/admin/themes/simplebootx/Portal/AdminCategorys/index.html
@@ -43,6 +43,7 @@
 	            <th>分类名称</th>
 	            <th>分类类型</th>
               <th>分类图标</th>
+              <th>发布价格(分)</th>
 	            <th>操作</th>
 	          </tr>
 	        </thead>
