--- a/admin/themes/simplebootx/Portal/AdminCategorys/edit.html
+++ b/admin/themes/simplebootx/Portal/AdminCategorys/edit.html
@@ -34,6 +34,12 @@
 								</div>
 							</div>
 							<div class="control-group">
+								<label class="control-label">发布价格（分）</label>
+								<div class="controls">
+									<input type="text" name="price" value="{$data.price}">
+								</div>
+							</div>
+							<div class="control-group">
 								<label class="control-label">类型</label>
 								<div class="controls">
 									<select name="type">
