--- a/admin/themes/simplebootx/Portal/AdminTipoff/edit.html
+++ b/admin/themes/simplebootx/Portal/AdminTipoff/edit.html
@@ -39,6 +39,7 @@
 						<input type="hidden" style="width: 400px;" name="tid" value="{$to.tid}"/>
 						<input type="hidden" style="width: 400px;" name="id" value="{$to.id}"/>
 						<input type="hidden" style="width: 400px;" name="illegal_id" value="{$to.illegal_id}"/>
+						<input type="hidden" style="width: 400px;" name="member_id" value="{$to.member_id}"/>
 						<input type="hidden" style="width: 400px;" name="type" value="{$to.type}"/>
 					</table>
 				</div>
